@@ -1,5 +1,9 @@
 emumaster (0.2.0) unstable; urgency=low
 
+  * genesis/megadrive/megacd support
+  * landscape support
+  * better search
+  * restart confirmation dialog to prevent accidental pushing on restart button
   * [bug] if games have different extensions they are incorrectly sorted in disk gallery - fixed
   * [bug] mulitplayer don't work in psx - fixed
   * [bug] strange sixaxis identify animation - fixed
